Fix run, update readme.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.7"
 
 services:
   filebeat:
+    user: root # needed to read docker.sock
     container_name: ast-filebeat
     image: ast_filebeat:latest
-    hostname: ast-filebeat
+    # hostname: ast-filebeat
     restart: always
     volumes:
       # needed to persist filebeat tracking data
@@ -12,7 +13,7 @@ services:
       # needed to access all docker logs (read only)
       - /var/lib/docker/containers:/usr/share/dockerlogs/data:ro
       # needed to access additional info about containers
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       # needed to load logs for system and auth modules
       # - /var/log/:/var/log/:ro
       # needed to load logs for auditd module
